objects/vlocity_cmt__InventoryItem__c.object
<CustomObject>
    <description>Represents item instances that are not generally tied to any specific customer and which can be tracked in inventory. Useful for equipment or devices before they are purchased by a customer or that are never purchased by a customer. Examples include inventoried SIM cards, networking equipment, set-top boxes and meters.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Items (Account)</relationshipLabel>
        <relationshipName>Inventory_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActivationDate__c</fullName>
        <description>The date of activation for this Inventory Item.</description>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AverageMonthlyUsage__c</fullName>
        <description>Average monthly usage for the service point.</description>
        <label>Average Monthly Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account responsible for paying for the item.</description>
        <label>BillingAccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Items (BillingAccountId)</relationshipLabel>
        <relationshipName>Inventory_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisconnectLocation__c</fullName>
        <description>Location of the disconnection (meter removed, line cut, switch flipped, etc.)</description>
        <label>Disconnect Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meter removed</fullName>
                </value>
                <value>
                    <fullName>Line cut</fullName>
                </value>
                <value>
                    <fullName>Switch flipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GasPressureLevel__c</fullName>
        <description>The gas pressure level (applicable for gas-related inventories)</description>
        <label>Gas Pressure Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InstallDate__c</fullName>
        <description>Date the meter was installed at the premises.</description>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemType__c</fullName>
        <description>Type of meter installed at the Service Point (Smart Meter, Prepay Meter, etc.)</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Smart Meter</fullName>
                </value>
                <value>
                    <fullName>Prepay Meter</fullName>
                </value>
                <value>
                    <fullName>Interval Meter</fullName>
                </value>
                <value>
                    <fullName>Two-way Meter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineNumber__c</fullName>
        <description>Line Number</description>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremiseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Premise</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Inventory Items</relationshipLabel>
        <relationshipName>InventoryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Items</relationshipLabel>
        <relationshipName>InventoryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProvisioningStatus__c</fullName>
        <description>The current provisioning, or fulfillment, status of the inventory Item with values such as New, Active, Changed or Deleted.</description>
        <label>ProvisioningStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QualificationExpirationDate__c</fullName>
        <label>Qualification Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SerialNumber__c</fullName>
        <externalId>true</externalId>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account that identifies the service location or subscriber that is the user of the service.</description>
        <label>ServiceAccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Items (ServiceAccountId)</relationshipLabel>
        <relationshipName>Inventory_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Inventory Items</relationshipLabel>
        <relationshipName>InventoryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Status of the Inventory Item.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Inventory Item</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Items</pluralLabel>
    <recordTypes>
        <fullName>vlocity_cmt__InventoryItem</fullName>
        <active>true</active>
        <label>Inventory Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ServiceQualificationResult</fullName>
        <active>true</active>
        <label>Service Qualification Result</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>